Removed class prefix. Added amp CSS version 1/3 the normal size

--- a/stylesheets/fonts/_fonts.scss
+++ b/stylesheets/fonts/_fonts.scss
@@ -341,49 +341,49 @@
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansCJKsc-Black.otf');
+	src: url('#{$noto-font-path}NotoSansCJKBlack.otf');
 	font-weight: 900;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansCJKsc-Bold.otf');
+	src: url('#{$noto-font-path}NotoSansCJKBold.otf');
 	font-weight: 700;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansCJKsc-DemiLight.otf');
+	src: url('#{$noto-font-path}NotoSansCJKDemiLight.otf');
 	font-weight: 300;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansCJKsc-Light.otf');
+	src: url('#{$noto-font-path}NotoSansCJKLight.otf');
 	font-weight: 300;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansCJKsc-Medium.otf');
+	src: url('#{$noto-font-path}NotoSansCJKMedium.otf');
 	font-weight: 500;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansCJKsc-Regular.otf');
+	src: url('#{$noto-font-path}NotoSansCJKRegular.otf');
 	font-weight: 400;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansCJKsc-Thin.otf');
+	src: url('#{$noto-font-path}NotoSansCJKThin.otf');
 	font-weight: 100;
 	font-style: normal;
 }
@@ -810,14 +810,14 @@
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansMonoCJKsc-Bold.otf');
+	src: url('#{$noto-font-path}NotoSansMonoCJKBold.otf');
 	font-weight: 700;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Noto";
-	src: url('#{$noto-font-path}NotoSansMonoCJKsc-Regular.otf');
+	src: url('#{$noto-font-path}NotoSansMonoCJKRegular.otf');
 	font-weight: 400;
 	font-style: normal;
 }
