--- a/stylesheets/scss/components/_snackbars.scss
+++ b/stylesheets/scss/components/_snackbars.scss
@@ -6,7 +6,7 @@
 
 $snackbar-action-margin: rem-calc(24px);
 
-.sc-snackbar {
+.snackbar {
 	background: $snackbar-background;
 	bottom: 0;
 	color: $snackbar-font-color;
