--- a/stylesheets/scss/components/_bottom-navigation.scss
+++ b/stylesheets/scss/components/_bottom-navigation.scss
@@ -7,7 +7,7 @@
 $bottom-nav-height: rem-calc(56px); // Default rem-calc(56px)
 $bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 
-.sc-bottom-nav, .sc-bottom-shifting {
+.bottom-nav, .bottom-shifting {
 	background: $bottom-nav-background;
 	bottom: 0;
 	left: 0;
@@ -33,7 +33,7 @@ $bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 		}
 	}
 
-	&.sc-expanded {
+	&.expanded {
 		margin: 0;
 	}
 
@@ -47,7 +47,7 @@ $bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 			color: $bottom-nav-on-color;
 		}
 
-		&.sc-active {
+		&.active {
 			color: $bottom-nav-on-color;
 
 			.material-icons {
@@ -58,7 +58,7 @@ $bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 }
 
 @if( in-array( 'bottom-nav', $bottom-nav ) ) {
-	.sc-bottom-nav a {
+	.bottom-nav a {
 		font-size: rem-calc(12px);
 		height: $bottom-nav-height;
 		max-width: rem-calc(168px);
@@ -76,7 +76,7 @@ $bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 			@include square($bottom-nav-icon-size);
 		}
 
-		&.sc-active {
+		&.active {
 			font-size: rem-calc(14px);
 			padding: rem-calc(6px) rem-calc(12px) rem-calc(10px) rem-calc(12px);
 		}
@@ -84,7 +84,7 @@ $bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 }
 
 @if( in-array( 'bottom-shifting', $bottom-nav ) ) {
-	.sc-bottom-shifting a {
+	.bottom-shifting a {
 		height: $bottom-nav-height;
 		max-width: rem-calc(96px);
 		min-width: rem-calc(56px);
@@ -95,17 +95,17 @@ $bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 			@include square($bottom-nav-icon-size);
 		}
 
-		.sc-content {
+		.content {
 			display: none;
 		}
 
-		&.sc-active {
+		&.active {
 			font-size: rem-calc(14px);
 			max-width: rem-calc(168px);
 			min-width: rem-calc(96px);
 			padding: rem-calc(6px) 0 rem-calc(10px) 0;
 
-			.sc-content {
+			.content {
 				display: block;
 				margin: rem-calc(6px) 0 0 0;
 			}
