--- a/stylesheets/scss/components/_bottom-sheet.scss
+++ b/stylesheets/scss/components/_bottom-sheet.scss
@@ -12,7 +12,7 @@ $bottom-sheet-grid-content-size: rem-calc(16px); // Default rem-calc(16px)
 $bottom-sheet-music-image-size: rem-calc(52.5px); // Default rem-calc(42.5px)
 $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 
-.sc-bottom-sheet {
+.bottom-sheet {
 	@include transition(margin $transition-small-duration $standard-transition);
 	@include material-shadow(16);
 	background: $bottom-sheet-background;
@@ -50,7 +50,7 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 		@media #{$medium-up} {
 			@include transition(margin $transition-large-duration $standard-transition);
 			width: 40%;
-			@include border-radius-top(var(--border-size, $border-size));
+			@include border-radius-top( if( $var == true, var(--border-size, $border-size), $border-size ) );
 		}
 	}
 
@@ -75,10 +75,10 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 		}
 	}
 
-	&.sc-expanded {
+	&.expanded {
 		margin: 0 auto;
 
-		~ .sc-bottom-sheet-background {
+		~ .bottom-sheet-background {
 			visibility: visible;
 		}
 	}
@@ -93,7 +93,7 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 			font-weight: $bottom-sheet-font-weight;
 			padding: 0;
 
-			&.sc-divider {
+			&.divider {
 				margin: rem-calc(7px) rem-calc(-16px) rem-calc(8px) rem-calc(-16px);
 			}
 		}
@@ -111,7 +111,7 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 		&-header {
 			padding: 0 rem-calc(16px) rem-calc(8px) rem-calc(16px);
 
-			ul li.sc-header {
+			li.header {
 				color: $bottom-sheet-header-font-color;
 				height: rem-calc(56px);
 			}
@@ -122,7 +122,7 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 		&-grid {
 			padding: rem-calc(16px) rem-calc(24px) rem-calc(24px) rem-calc(24px);
 
-			ul li {
+			li {
 				margin: 0 0 $large-gutter 0;
 				@include flex-container($justify: space-between);
 
@@ -130,22 +130,22 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 					margin: 0;
 				}
 
-				&.sc-divider {
+				&.divider {
 					margin: 0 rem-calc(8px);
 				}
 
-				&.sc-header {
+				&.header {
 					color: $bottom-sheet-header-font-color;
 					height: rem-calc(56px);
 				}
 			}
 
-			.sc-grid-item {
+			.grid-item {
 				padding: 0;
 				@include flex-grow(1);
 			}
 
-			.sc-grid-icon {
+			.grid-icon {
 				text-align: center;
 				vertical-align: middle;
 				margin: 0 0 rem-calc(8px) 0;
@@ -158,7 +158,7 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 				}
 			}
 
-			.sc-grid-content {
+			.grid-content {
 				text-align: center;
 				vertical-align: middle;
 				height: $bottom-sheet-grid-content-size;
@@ -180,7 +180,7 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 				left: 0;
 			}
 
-			.sc-determinate {
+			.determinate {
 				background: transparent;
 				top: $bottom-sheet-music-height - $bottom-sheet-music-image-size;
 				left: $bottom-sheet-music-image-size;
@@ -189,7 +189,7 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 				width: calc(100% - #{$bottom-sheet-music-image-size});
 			}
 
-			.sc-info {
+			.info {
 				position: absolute;
 				top: rem-calc(5px);
 				padding: 0 rem-calc(10px);
@@ -215,16 +215,16 @@ $bottom-sheet-music-height: rem-calc(50px); // Default rem-calc(40px)
 				}
 			}
 
-			.sc-band {
+			.band {
 				font-size: rem-calc(16px);
 			}
 
-			.sc-track {
+			.track {
 				font-size: rem-calc(14px);
 				color: rgba($black, .38);
 			}
 
-			.sc-controls {
+			.controls {
 				width: calc(100% - 75% - #{$bottom-sheet-music-image-size});
 				position: absolute;
 				left: calc(#{$bottom-sheet-music-image-size} + 50%);
