--- a/stylesheets/scss/components/_colors-create.scss
+++ b/stylesheets/scss/components/_colors-create.scss
@@ -3,45 +3,45 @@
 	@if( in-array($color-name, $allowed-colors)) {
 		@each $color-type, $color-value in $color {
 			@if( $color-type == 'base' ) {
-				.sc-#{$color-name}, .sc-#{$color-name}-500 {
+				.#{$color-name}, .#{$color-name}-500 {
 					background: $color-value;
 				}
 
 				@if( in-array( 'text', $allowed-colors ) ) {
-					.sc-#{$color-name}-text, .sc-#{$color-name}-500-text {
+					.#{$color-name}-text, .#{$color-name}-500-text {
 						color: $color-value;
 					}
 				}
 			} @else if $color-name == 'shades' {
-				.sc-#{$color-type} {
+				.#{$color-type} {
 					background: $color-value;
 				}
 
 				@if( in-array( 'text', $allowed-colors ) ) {
-					.sc-#{$color-type}-text {
+					.#{$color-type}-text {
 						color: $color-value;
 					}
 				}
 			} @else if str_index( quote( $color-value ), 'a' ) {
 				@if( in-array( 'accent', $allowed-colors ) ) {
-					.sc-#{$color-name}-#{$color-type} {
+					.#{$color-name}-#{$color-type} {
 						background: $color-value;
 					}
 
 					@if( in-array( 'text', $allowed-colors ) ) {
-						.sc-#{$color-name}-#{$color-type}-text {
+						.#{$color-name}-#{$color-type}-text {
 							color: $color-value;
 						}
 					}
-				} 
+				}
 			} @else {
 				@if( $color-type != '500' ) {
-					.sc-#{$color-name}-#{$color-type} {
+					.#{$color-name}-#{$color-type} {
 						background: $color-value;
 					}
 
 					@if (in-array('text', $allowed-colors)) {
-						.sc-#{$color-name}-#{$color-type}-text {
+						.#{$color-name}-#{$color-type}-text {
 							color: $color-value;
 						}
 					}
