--- a/stylesheets/scss/components/_data-tables.scss
+++ b/stylesheets/scss/components/_data-tables.scss
@@ -16,21 +16,21 @@ table {
 	overflow: auto;
 	display: block;
 
-	.sc-numeric-col {
+	.numeric-col {
 		text-align: right;
 		padding-left: $table-column-padding;
 		padding-right: 0;
 	}
 
-	.sc-checkbox-col {
+	.checkbox-col {
 		padding: 0 $table-first-column-padding;
 
-		.sc-checkbox + label {
+		.checkbox + label {
 			padding: 0;
 		}
 	}
 
-	&.sc-table-hover {
+	&.table-hover {
 		tbody tr {
 			@include transition(background .2s ease-in-out);
 
@@ -40,7 +40,7 @@ table {
 		}
 	}
 
-	&.sc-table-responsive {
+	&.table-responsive {
 		@media #{$medium-down} {
 			width: 100%;
 			border-collapse: collapse;
@@ -114,7 +114,7 @@ thead th {
 	}
 }
 
-tbody td {
+td {
 	color: if( $theme == light, rgba($black, .87), rgba($white, .87));
 	font-size: rem-calc(13px);
 	font-weight: 400;
@@ -122,7 +122,7 @@ tbody td {
 	line-height: $table-content-size;
 }
 
-tbody td, thead th {
+td, th {
 	text-align: left;
 	@include box-sizing(border-box);
 	padding-right: $table-column-padding;
