--- a/stylesheets/scss/components/_dialogs.scss
+++ b/stylesheets/scss/components/_dialogs.scss
@@ -4,14 +4,14 @@
  * http://www.google.com/design/spec/components/dialogs.html
  **************************************/
 
-.sc-dialog {
+.dialog {
 	@include material-shadow(24);
 	background: $dialog-background;
 	visibility: hidden;
 	@include opacity(0);
 	position: fixed;
 	width: 100%;
-	@include border-radius(var(--border-size, $border-size));
+	@include border-radius(if( $var == true, var(--border-size, $border-size), $border-size ) );
 	z-index: 5;
 	top: 50%;
 	left: 50%;
@@ -52,31 +52,31 @@
 		}
 	}
 
-	&.sc-expanded {
+	&.expanded {
 		visibility: visible;
 		@include opacity(1);
 
-		~ .sc-dialog-background {
+		~ .dialog-background {
 			visibility: visible;
 			@include opacity(.3);
 		}
 	}
 
-	.sc-dialog-container {
+	&-container {
 		padding: rem-calc(24px);
 	}
 
-	.sc-dialog-title {
+	&-title {
 		@include font($font-size-title, 0, $font-weight-title, $line-height-title, $font-color-title, $letter-spacing-title);
 		margin-bottom: rem-calc(20px);
 	}
 
-	.sc-dialog-actions {
+	&-actions {
 		float: right;
 		height: rem-calc(52px);
 		padding: rem-calc(8px);
 
-		.sc-flat-button, .sc-raised-button {
+		.flat-button, .raised-button {
 			height: rem-calc(36px);
 			line-height: rem-calc(36px);
 			margin: 0 rem-calc(8px) 0 0;
