--- a/stylesheets/scss/components/_grid-lists.scss
+++ b/stylesheets/scss/components/_grid-lists.scss
@@ -4,7 +4,7 @@
  * https://material.google.com/components/grid-lists.html
  **************************************/
 
-.sc-grid {
+.grid {
 	position: relative;
 
 	img {
@@ -40,7 +40,7 @@
 	&-two {
 		height: rem-calc(68px);
 
-		.sc-first {
+		.first {
 			max-width: 75%;
 			&-small {
 				font-size: rem-calc(12px);
@@ -51,13 +51,13 @@
 			}
 		}
 
-		.sc-second {
+		.second {
 			max-width: 75%;
 			font-size: rem-calc(14px);
 		}
 	}
 
-	.sc-action {
+	.action {
 		max-width: 25%;
 
 		.material-icons {
@@ -65,11 +65,11 @@
 			font-size: rem-calc(16px);
 			cursor: pointer;
 
-			&.sc-left {
+			&.left {
 				float: left;
 			}
 
-			&.sc-right {
+			&.right {
 				float: right;
 			}
 		}
