--- a/stylesheets/scss/components/_menu.scss
+++ b/stylesheets/scss/components/_menu.scss
@@ -4,15 +4,15 @@
  * https://material.io/guidelines/components/menus.html
  */
 
-.sc-menu {
-	background: var(--background, $background);
+.menu {
+	background: if( $var == true, var(--background, $background), $background);
 	visibility: hidden;
 	@include font($font-size-menu, 0, $font-weight-menu, $line-height-menu, $font-color-menu, $letter-spacing-menu);
 	@include opacity(0);
 	position: absolute;
 	@include material-shadow(8);
 	@include flex-container(column, null);
-	@include border-radius(var(--border-size, $border-size));
+	@include border-radius(if( $var == true, var(--border-size, $border-size), $border-size));
 	padding: rem-calc(8px) 0;
 	white-space: nowrap;
 	text-align: left;
@@ -57,7 +57,7 @@
 		}
 	}
 
-	&.sc-expanded {
+	&.expanded {
 		visibility: visible;
 		@include opacity(1);
 	}
@@ -78,22 +78,22 @@
 	}
 }
 
-select.sc-select {
+select.select {
 	display: none;
 }
 
-div.sc-select {
+div.select {
 	height: rem-calc(72px);
 	padding: rem-calc(16px) 0 rem-calc(8px) 0;
 	border-bottom: $textfield-border-size solid if($theme == light, rgba($black, .38), rgba($white, .5));
 	position: relative;
 	margin: 0 0 rem-calc(8px) 0;
 
-	.sc-menu {
+	.menu {
 		top: 0;
 	}
 
-	.sc-active {
-		color: var(--main-color, $main-color);
+	.active {
+		color: if( $var, var(--main-color, $main-color), $main-color);
 	}
 }
