--- a/stylesheets/scss/components/_shadows.scss
+++ b/stylesheets/scss/components/_shadows.scss
@@ -8,7 +8,7 @@
 // Create classes for elevation
 @each $depth, $setting in $elevation-umbra-map {
 	@if( in-array( quote($depth), $shadow-depths ) ) {
-		.sc-z#{$depth} {
+		.z#{$depth} {
 			@include material-shadow($depth);
 		}
 	}
