--- a/stylesheets/scss/components/_steppers.scss
+++ b/stylesheets/scss/components/_steppers.scss
@@ -4,7 +4,7 @@
  * https://material.google.com/components/steppers.html
  **************************************/
 
-.sc-stepper {
+.stepper {
 	@if( in-array( 'horizontal', $stepper ) ) {
 		&-horizontal {
 			li {
@@ -13,7 +13,7 @@
 				padding: rem-calc(24px) 0 rem-calc(24px) rem-calc(24px);
 			}
 
-			.sc-step-circle {
+			.step-circle {
 				margin: 0 rem-calc(12px) 0 0;
 			}
 		}
@@ -25,20 +25,20 @@
 				padding: 0 0 0 rem-calc(24px);
 			}
 
-			.sc-step-circle {
+			.step-circle {
 				margin: 0 rem-calc(8px) 0 0;
 			}
 		}
 	}
 }
 
-.sc-step {
+.step {
 	padding: 0;
 	color: $stepper-step-off-font-color;
 	font-weight: 400;
 	font-size: rem-calc(14px);
 
-	&.sc-active {
+	&.active {
 		color: $stepper-step-on-font-color;
 		font-weight: 500;
 	}
@@ -54,7 +54,7 @@
 		line-height: rem-calc(24px);
 		display: inline-block;
 
-		&.sc-active {
+		&.active {
 			background: $stepper-circle-on-color;
 		}
 	}
