--- a/stylesheets/scss/smaterial-amp.scss
+++ b/stylesheets/scss/smaterial-amp.scss
@@ -1,21 +1,90 @@
 $amp: true;
+$var: false;
 $allowed-colors: ('indigo', 'blue', 'shades', 'accent', /*'text'*/) !default;
+/**************************************
+ * All stylesheets
+ *
+ * Some may be turned off by commenting them
+ * NOTE that some classes are extended and could there for cause problems when turned off
+ **************************************/
+
+// Style
+@import 'components/settings'; // All settings
+@import 'components/media-queries'; // All possible media queries
+//@import 'components/root'; // All CSS variables
 $grid: (/*'hidden'*/) !default;
+//@import 'components/grid'; // Grid functionality
+
 $flex-grid: (/*'order', 'hidden'*/) !default;
-$normalize: (/*'scrollbar', 'selection',*/ 'helper-classes') !default;
+@import 'components/flex-grid'; // Grid functionality
+
+$normalize: (/*'scrollbar', 'selection', 'helper-classes'*/ ) !default;
+@import 'components/normalize'; // Remove browser default styles add Material default styles
+
 $shadow-depths: ('0', '1', '2', '3', '4', '6', '8', '9', '10', '12', '16', '24') !default;
+//@import 'components/shadows'; // Shadow depths (Can be turned off)
+
+$typography: ('display-4', 'display-3', 'display-2', 'display-1', 'headline', 'title', 'subhead-1', 'subhead-2', 'body-1', 'body-2', 'caption', 'label',  /*'menu', 'button'*/) !default;
+@import 'components/typography'; // Typography
+
 $icons: (/*'sizes'*/) !default;
+@import 'components/icons'; // Icons with their shadow (can be turned off)
+
+// Components
+@import 'components/appbar'; // Top menu bar (can be turned off)
+
 $bottom-nav: ('bottom-nav', 'bottom-shifting') !default;
-$bottom-sheet: ('header', 'grid', 'music') !default;
-$button: ('raised', 'flat', 'floating', 'toggle', /*'ripple'*/) !default;
+@import 'components/bottom-navigation'; // Used to style the bottom navigation
+
+$bottom-sheet: ('header', 'grid'/*, 'music'*/) !default;
+@import 'components/bottom-sheet'; // Used to style bottom sheet / modal (can be turned off)
+
+$button: ('raised', /*'dense',*/ 'flat', 'floating', /*'mini', 'toggle', 'ripple'*/) !default;
+@import 'components/buttons'; // Used to style buttons (can be turned off)
+
+@import 'components/cards'; // Used to style cards (can be turned off)
+
 $chip: ('deletable', 'contact') !default;
+@import 'components/chips'; // Used to style chips (can be turned off)
+
+@import 'components/data-tables'; // Used to style tables (can be turned off)
+@import 'components/dialogs'; // Used to style dialog (can be turned off)
+
+@import 'components/expansion-panels'; // Used to style expansion panels (can be turned off)
+//@import 'components/grid-lists'; // Used to style grid lists (can be turned off)
+@import 'components/menu'; // Used to style menus (can be turned off) is used for appbar, navigation drawer dropdown and select
+
 $navigation-drawer: (/*'full-height', 'clipped', 'floating', 'persistent',*/ 'temporary') !default;
+@import 'components/navigation-drawer'; // Used to style navigation drawer (can be turned off)
+
+@import 'components/lists'; // Used to style lists (can be turned off)
+
 $notification: ('big-text', 'big-picture', 'progress', 'media') !default;
-$progress: ('determinate', 'indeterminate', /*'buffer',*/ 'circular') !default;
+//@import 'components/notifications'; // Notifications style (can be turned off)
+
+//@import 'components/pickers'; // Used to style date and time picker (can be turned off)
+
+$progress: ('determinate', 'indeterminate', /*'buffer',*/ 'circular') !default; // It's better to turn off "buffer" since it isn't working properly
+@import 'components/progress'; // Used to style progress and activity indicators (can be turned off)
+
 $selection: ('checkbox', 'radio', 'switch') !default;
+@import 'components/selection'; // Used to style selection controls (checkbox, radio button, switch) (can be turned off)
+
 $slider: (/*'discrete'*/) !default;
+//@import 'components/sliders'; // Used to style sliders (can be turned off)
+
+//@import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
+
 $stepper: ('horizontal', 'vertical') !default;
+//@import 'components/steppers'; // Used to style steppers (can be turned off)
+
 $tab: ('tab', 'tab-icon', 'tab-icon-text') !default;
-$textfield: ('floating', 'floating-dense', 'single', 'single-dense', 'multi') !default;
-$typography: ('display-4', 'display-3', 'display-2', 'display-1', 'headline', 'title', 'subhead-1', 'subhead-2', 'body-1', 'body-2', 'caption', 'label',  'menu', 'button') !default;
-@import 'smaterial';
+@import 'components/tabs'; // Used to style tabs (can be turned off)
+
+$textfield: ('floating', /*'floating-dense',*/ 'single', /*'single-dense',*/ 'multi') !default;
+@import 'components/textfields'; // Used to style input (can be turned off)
+
+//@import 'components/tooltips'; // Used to style tooltips (can be turned off)
+@import 'components/colors-create'; // Used to create colors(can be turned off)
+
+//@import 'components/full-width'; // Used tp style elements for full screen
